# culminating_game

./: .gitmodules  Cargo.toml  Makefile  Makefile.arm9  README.md  build.zig  cmath.h  convert.py  culminating  culminating_game.elf  culminating_game.nds  dos.h  dream.txt  dream2.txt  exec.sh  go.mod  icon.svg.import  main.c  main.go  once.sh  project.godot  resources.md  tetris.hex  touch_area.nds
arm9/source/: graphics.c  graphics.h  main.c
assets/: convert.sh  pen_sprite.aseprite
emu/: NO$GBA.INP
files/: log.txt
game_assets/: world.blend  world.blend1
nitrofiles/bg/: blank_background.pal  signature_minigame_bottum.img  signature_minigame_bottum.map  signature_minigame_bottum.pal  title_screen_bottum.img  title_screen_bottum.map  title_screen_bottum.pal  title_screen_top.img  title_screen_top.map  title_screen_top.pal
nitrofiles/sprite/: debug_16.img  debug_16.pal  pen_sprite.img  pen_sprite.pal
plot/: Flowers.md
plot/.obsidian/: workspace.json
source/: const.hpp  main.c  main.cpp  signatureminigame.hpp
src/: Main.java  main.rs  main.zig
yychr/: yychr.ini
zig-cache/o/1a21f1e55c9052f79467276fcf355cd1/: builtin.zig
zig-cache/o/2bc01fb915557129869f41a4d66cf639/: Project
zig-cache/o/2c7ebc7c5a83f176ca33bd8c81730953/: dependencies.zig
zig-cache/o/2e9873734474728fedf19e7cae440f9f/: builtin.zig
